skeleton of heroslider, fixed networkbar z-index to be higher to be on top of slider when scrolling

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -4,6 +4,7 @@
 html, body
   background: #000
   color: #fff
+  margin-top: 40px
 
 .gamespace-container
   margin: 0 auto
@@ -13,3 +14,4 @@ html, body
 $networkbar-heronav-link-color: #3497b8
 
 @import 'components/networkbar'
+@import 'components/heroslider'
