--- a/src/styles/components/_networkbar.sass
+++ b/src/styles/components/_networkbar.sass
@@ -10,6 +10,7 @@ $networkbar-height: 40px
   line-height: $networkbar-height
   border-bottom: 1px solid #292929
   background: #000
+  z-index: 10
 
   &::after
     display: table
